<?xml version="1.0" encoding="utf-8"?>
<resources>
    <array name="tabbar_4s_array">
        <item>推荐活动</item>
        <item>选车</item>
        <item>推荐店铺</item>
        <item>团购汇</item>
    </array>
    <string name="exception_array_length">itemText和imgResId长度应相等</string>
    <string name="app_hint">提示：</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_expand">展开</string>
    <string name="app_shrink">收起</string>
    <string name="app_net_error">网络连接失败，请重试</string>
    <string name="app_sever_error">网络连接失败，请稍后重试…</string>
    <string name="app_order_cancel">取消订单</string>
    <string name="loading">正在加载，请稍等</string>
    <string name="app_no_data">暂无数据</string>
    <!--//地址选择=========================================================-->
    <string name="city_title">选择地区：</string>

    <string name="me_no_choice">未选择</string>
    <string name="me_instalments">分期付款</string>
    <string name="me_online_pay">在线全款</string>
    <string name="me_pickup_point">提车点自提</string>
    <string name="me_to_home">送车上门</string>
    <string name="me_offline_pay">线下支付（上门收款）</string>
    <string name="me_pay_deposit">预付订金</string>
    <string name="me_offline_pay2">上门收款</string>
    <!--客服电话-->
    <string name="tv_service_phone">400&#8212;1868&#8212;555</string>
    <!--活动提示-->
    <string name="promotion_not_start">活动尚未开始</string>
    <string name="promotion_is_end_title">该活动已结束</string>
    <string name="promotion_is_end">活动结束</string>

    <string name="fragment_description_city_choose">省市区选择</string>
    <!--公司名称-->
    <string name="company_for_short">Hengxin Auto E-commerce Co.,Ltd.</string>
    <string name="password_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_</string>
    <string name="update">版本更新</string>
    <string name="downloading_new_version_apk">正在更新安装文件</string>
    <string name="me_has_new_version">有新版本</string>
    <string name="me_is_new_version">已是最新版本</string>

    <!--申请退款-->
    <string name="label_tv_reason">退款原因</string>
    <string name="choose_tv_reason">请选退款原因</string>
    <string name="hint_memo_reason">请输入退款说明</string>
    <string name="notice_text">温馨提示：一旦申请退款成功，订单取消后将无法恢复。该订单已付金额将返还到银行卡或POS机线下退款</string>
    <string name="btn_commit">提交</string>

    <!--取消订单-->
    <string name="label_tv_cancel">取消原因</string>
    <string name="hint_memo_cancel">请输入取消原因</string>
    <string name="notice_cancel_text">温馨提示：订单取消后将无法恢复，请输入取消原因后点击提交</string>
    <string name="btn_cancel_commit">提交</string>

    <string name="price_range">店铺参考价：</string>
    <string name="auto_msrp">厂家指导价：</string>
    <string name="coupon_description">优惠说明</string>
    <string name="coupon_detail">优惠券详情</string>
    <string name="order_refund">申请退款</string>
    <string name="use_shop">使用门店</string>
    <string name="user_tip">使用须知</string>
    <string name="end_date">有效日期</string>
    <string name="complete">完成</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="drive_distance">行驶里程:</string>
    <string name="car_info">车辆信息:</string>
    <string name="car_VIN">车辆识别码:</string>
    <string name="car_plate_number">车 牌 号:</string>

    <!--在线预约与车辆信息-->
    <string name="title_activity_auto_info">车辆信息</string>
    <string name="title_activity_auto_detail">车辆详情</string>
    <string name="title_activity_edit_auto_info">填写车辆信息</string>
    <string name="title_activity_repair_record">保养记录</string>
    <string name="empty_coupon">您还没有优惠券</string>
    <string name="title_activity_choose_brand">选择品牌</string>
    <string name="title_activity_choose_model">选择车型</string>

    <!-- ============================================================================= -->

    <string name="buy_verify_interior_color_label">内饰：</string>
    <string name="buy_verify_without_color_label">车身：</string>


    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="to_get_coupon">去领券</string>
    <string name="do_not_use_coupon">不使用优惠券</string>
    <string name="coupon_rule">使用范围</string>
    <string name="coupon_detail_mark">详细信息</string>
    <string name="coupon_amount">优惠面额</string>
    <string name="coupon_number">券编号</string>
    <string name="title_activity_my_comment_list">我的评价</string>
</resources>
