<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hxqc="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_color"
    tools:context="com.hxqc.mall.activity.order.ApplicationRefundActivity">

    <ScrollView
        android:id="@+id/sv_refund"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_reason_label"
                    style="@style/BlackText14"
                    android:text="@string/label_tv_reason" />

                <com.hxqc.mall.core.views.SpinnerPopWindow
                    android:id="@+id/spw_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16"
                    android:layout_marginStart="@dimen/margin_16"

                    >

                    <TextView
                        android:id="@+id/tv_reason"
                        style="@style/GrayText14"
                        android:text="@string/choose_tv_reason" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_city_arrow" />

                    <View
                        style="@style/UnderLine"
                        android:layout_below="@+id/tv_reason"
                        android:layout_marginTop="4dp" />
                </com.hxqc.mall.core.views.SpinnerPopWindow>
            </LinearLayout>


            <com.hxqc.mall.core.views.materialedittext.MaterialEditText
                android:id="@+id/met_write_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:hint="@string/hint_memo_reason"
                android:textColor="#000"
                android:textColorHint="#989898"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="14sp"
                hxqc:baseColor="#989898"
                hxqc:maxCharacters="200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/notice_text"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <Button
                style="@style/btn_orange"
                android:id="@+id/btn_commit"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:text="@string/btn_commit"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
