<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical">

    <TextView
        style="@style/BlackText16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:paddingBottom="8dp"
        android:paddingLeft="@dimen/normal_padding_big_16"
        android:paddingRight="@dimen/normal_padding_big_16"
        android:paddingTop="8dp"
        android:text="@string/coupon_detail"
        android:textStyle="bold"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding_big_16">

            <LinearLayout
                android:id="@+id/coupon_description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/coupon_amount" />

                <TextView
                    android:id="@+id/coupon_description"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coupon_rule_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/coupon_rule" />

                <TextView
                    android:id="@+id/coupon_rule"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coupon_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/coupon_number" />

                <TextView
                    android:id="@+id/coupon_number"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/end_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/end_date" />

                <TextView
                    android:id="@+id/end_date"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/use_shop_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/use_shop" />

                <TextView
                    android:id="@+id/use_shop"
                    style="@style/BlackText14"
                    android:lineSpacingExtra="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/user_tip" />

                <TextView
                    android:id="@+id/user_tip"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/coupon_detail_mark_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/normal_size_5"
                android:visibility="gone">

                <TextView
                    style="@style/GrayText14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="6"
                    android:text="@string/coupon_detail_mark" />

                <TextView
                    android:id="@+id/coupon_detail_mark"
                    style="@style/BlackText14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>