<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hxqc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_color"
    >

    <ScrollView
        android:id="@+id/sv_refund"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/margin_16"
        android:paddingRight="@dimen/margin_16">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_reason_label"
                    style="@style/BlackText14"
                    android:text="@string/label_tv_cancel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_edittext_focused">
                <com.hxqc.mall.core.views.materialedittext.MaterialEditText
                    android:id="@+id/met_write_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:hint="请输入取消原因"
                    android:textCursorDrawable="@drawable/edittext_cursor"
                    android:background="@null"
                    style="@style/BlackText14"
                    android:textColorHint="#989898"
                    hxqc:maxCharacters="200"
                    hxqc:baseColor="@color/transparent"
                    hxqc:primaryColor="@color/transparent"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/notice_cancel_text"
                android:textColor="@color/text_gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_commit"
                style="@style/btn_orange"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:text="@string/btn_commit"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
